azure_devops/kubernetes/deploy.yml
apiVersion: v1
kind: Namespace
metadata:
  name: $NAMESPACE
  labels:
    name: $NAMESPACE
---
apiVersion: v1
kind: Service
metadata:
  name: $SERVICE_NAME-service
  namespace: $NAMESPACE
  labels:
    app: $SERVICE_NAME-app
spec:
  type: ClusterIP
  selector:
    app: $SERVICE_NAME-app
  ports:
  - port: $SERVICE_PORT
    protocol: TCP
    targetPort: $SERVICE_PORT
    name: http
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: $SERVICE_NAME-deployment
  namespace: $NAMESPACE
  labels:
    app: $SERVICE_NAME-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: $SERVICE_NAME-app
  template:
    metadata:
      labels:
        app: $SERVICE_NAME-app
    spec:
      containers:
      - name: $SERVICE_NAME
        image: $DOCKER_IMAGE_NAME:$IMAGE_TAG
        ports:
        - containerPort: $SERVICE_PORT
        resources:
          requests:
            cpu: $REQUESTED_CPU
            memory: $REQUESTED_MEMORY
          limits:
            cpu: $LIMIT_CPU
            memory: $LIMIT_MEMORY
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress-$SERVICE_NAME
  namespace: $NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx 
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
    - $HOST_NAME
    secretName: tls-secret
  rules:
  - host: $HOST_NAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: $SERVICE_NAME-service
            port: 
              number: $SERVICE_PORT
---
